--- a/ProyectoFinalRamosMaria/src/app/component/acerca-de/acerca-de.component.html
+++ b/ProyectoFinalRamosMaria/src/app/component/acerca-de/acerca-de.component.html
@@ -1,1 +1,15 @@
-<p>acerca-de works!</p>
+<div class="row">
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+        <img src="../../../assets/FOTOMIA.png" class="img-fluid" id="foto">
+    </div>
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+        <p id="nombre">Ramos María del Luján</p>
+        <p>Full Stack Developer Jr</p>
+    </div>
+    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+        <span id="acerca">
+            <h1>Acerca de mí</h1>
+            <p>Soy Técnica en Electrónica recibida en la E.E.S.T. N°4 "Prof. Héctor A. Laguarde". Actualmente estudio la Licenciatura en Ciencias Geológicas en la Universidad de Buenos Aires.</p>
+        </span>
+    </div>
+</div>
