--- a/ProyectoFinalRamosMaria/src/app/component/logo-ap/logo-ap.component.css
+++ b/ProyectoFinalRamosMaria/src/app/component/logo-ap/logo-ap.component.css
@@ -1,3 +1,36 @@
+.container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.redes{
+    margin-right: 0.5em;
+}
 #logoAP{
     width: 200px;
+    float: left;
+}
+img{
+    background-color: #c20f54;
+    width: 50px;
+}
+.btn{
+    border-width: medium;
+    color: whitesmoke;
+}
+
+
+/*/Vista celular/*/
+@media (max-width: 575px){
+    .container{
+        flex-direction: column;
+    }
+    .redes{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .redes img{
+        margin: 0.25em;
+    }
 }
