--- a/ProyectoFinalRamosMaria/src/app/component/logo-ap/logo-ap.component.html
+++ b/ProyectoFinalRamosMaria/src/app/component/logo-ap/logo-ap.component.html
@@ -1,1 +1,15 @@
-<img src="../../../assets/Logo.png" id="logoAP">
+<div class="row">
+    <div class="container">
+        <div class="logo">
+            <img src="../../../assets/Logo.png" id="logoAP">
+        </div>
+        <div class="redes">
+            <a href="https://www.linkedin.com/in/mariaramos040701/"><img src="../../../assets/linkedin.png" id="linkedin"></a>
+            <a href="https://www.instagram.com/marilu_0407/"><img src="../../../assets/instagram.png" id="instagram"></a>
+            <a href="https://twitter.com/marilu0407?t=ZLoz7kH3kf5Ui6i_C18_UQ&s=08"><img src="../../../assets/twitter.png" id="twitter"></a>
+            <a href="https://www.facebook.com/mariluuu004/"><img src="../../../assets/facebook.png" id="facebook"></a>
+            <a href="https://github.com/marilu040701"><img src="../../../assets/github.png" id="github"></a>
+            <button type="button" class="btn btn-outline-ligth">INGRESO</button>
+        </div>
+    </div>
+</div>
