--- a/ProyectoFinalRamosMaria/src/app/component/estudio/estudio.component.css
+++ b/ProyectoFinalRamosMaria/src/app/component/estudio/estudio.component.css
@@ -1,7 +1,7 @@
 .row{
     padding: 20px;
     color: white;
-
+    font-size: 20px;
 }
 
 div{
@@ -17,18 +17,12 @@ h1,h3{
     margin-bottom: 30px;
 }
 
+
+/*/ LOS FORMATOS EN PANTALLA A PARTIR DE LOS 576PX/*/
 @media(min-width: 576px){
     #fotofacultad{
-        width: 70%;
-        margin-left: 29px;
-    }
-} 
-
-@media(max-width: 575px){
-    #fotofacultad{
-        position: top;
-        width: 30%;
-        right: 39%;
+        width: 55%;
+        margin-left: 23%;
     }
 } 
 
@@ -40,41 +34,48 @@ h1,h3{
     }
 } 
 
-@media(max-width: 575px){
-    #fotoescuela{
-        position: top;
-        width: 20%;
-        right: 39%;
-    }
-} 
 @media(min-width: 576px){
     #fotounlam{
         width: 60%;
-        margin-top: 18px;
         margin-bottom: 10px;
         margin-left: 46px;
     }
+
 } 
-@media(max-width: 575){
-    #fotounlam{
-        width: 25%;
-        right: 39%;  
-    }    
-}
 
 @media(min-width: 576px){
     #fotocentro{
         width: 60%;
-        margin-top: 25px;
         margin-left: 47px;
     }
 } 
 
-@media(max-width: 575){
-    #fotocentro{
-        width: 20%;
-        position: top;
-        right: 39%;  
-    }
 
+/*/ LOS FORMATOS A MAXIMOS HASTA 575PX/*/
+
+@media(max-width: 575px){
+    #fotofacultad{
+        width: 32%;
+        margin-left: 13%;
+    }
+}
+
+@media(max-width: 575px){
+    #fotoescuela{
+        width: 35%;
+        margin-left: 5%;
+    }
+}
+
+@media(max-width: 575px){
+    #fotounlam{
+        width: 40%;
+        margin-left: 10%;
+    }
+}
+
+@media(max-width: 757px){
+    #fotocentro{
+        width: 35%;
+    }
 }
