Actualizaciones para la carga de la persona

--- a/ProyectoFinalRamosMaria/FrontEnd/src/app/component/acerca-de/edit-acerca-de.component.html
+++ b/ProyectoFinalRamosMaria/FrontEnd/src/app/component/acerca-de/edit-acerca-de.component.html
@@ -18,7 +18,7 @@
                         [(ngModel)]="persona.descripcion" required>
                 </div>
                 <div class="form-group">
-                    <label for="img">AAgregar imagen</label>
+                    <label for="img">Agregar imagen</label>
                     <input type="file" class="form-control" id="img" name="img" [(ngModel)]="persona.img" (change)="uploadImage($event)" accept=".jpg, .png, .jpeg">
                 </div>
                 <br>
