--- a/ProyectoFinalRamosMaria/FrontEnd/src/app/component/acerca-de/acerca-de.component.html
+++ b/ProyectoFinalRamosMaria/FrontEnd/src/app/component/acerca-de/acerca-de.component.html
@@ -3,7 +3,7 @@
             Editar Persona
         </button>
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <img src={{persona.img}} class="img-fluid" id="foto">
+        <img src="../../../assets/FOTOMIA.png" class="img-fluid" id="foto">
     </div>
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <p id="nombre">{{persona.nombre}} {{persona.apellido}}</p>
